rusty-cdk/tests/snapshots/snapshots__sns_with_output.snap
---
source: rusty-cdk/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "topic": "[SnsTopic]"
  },
  "Outputs": {
    "MyOutput": {
      "Value": {
        "Ref": "[SnsTopic]"
      }
    }
  },
  "Resources": {
    "[SnsTopic]": {
      "Properties": {
        "ArchivePolicy": {
          "MessageRetentionPeriod": "30"
        },
        "ContentBasedDeduplication": true,
        "DisplayName": "Some Display-Name",
        "FifoThroughputScope": "Topic",
        "FifoTopic": true,
        "TopicName": "some-name.fifo",
        "TracingConfig": "PassThrough"
      },
      "Type": "AWS::SNS::Topic"
    }
  }
}
