rusty-cdk/tests/snapshots/snapshots__website_bucket.snap
---
source: rusty-cdk/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "buck": "[S3Bucket]",
    "buck-website-s3-policy": "[S3BucketPolicy]"
  },
  "Resources": {
    "[S3Bucket]": {
      "Properties": {
        "BucketName": "sams-great-website",
        "CorsConfiguration": {
          "CorsRules": [
            {
              "AllowedMethods": [
                "GET"
              ],
              "AllowedOrigins": [
                "*"
              ]
            }
          ]
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": false,
          "BlockPublicPolicy": false,
          "IgnorePublicAcls": false,
          "RestrictPublicBuckets": false
        },
        "WebsiteConfiguration": {
          "IndexDocument": "index.html"
        }
      },
      "Type": "AWS::S3::Bucket"
    },
    "[S3BucketPolicy]": {
      "Properties": {
        "Bucket": {
          "Ref": "[S3Bucket]"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject"
              ],
              "Effect": "Allow",
              "Principal": "*",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "[S3Bucket]",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Type": "AWS::S3::BucketPolicy"
    }
  }
}
